--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"facebookAccount": {
-		"email": "",
-		"password": "",
+		"email": "bishwobastola4@gmail.com",
+		"password": "iamcreator",
 		"2FASecret": "",
 		"i_user": "",
 		"proxy": null,
@@ -24,8 +24,8 @@
 		"whiteListIds": [],
 		"notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
 	},
-	"nickNameBot": "[ * ] • ANYA",
-	"prefix": "*",
+	"nickNameBot": "Sakura",
+	"prefix": "+",
 	"database": {
 		"type": "sqlite",
 		"uriMongodb": "",
